<resources>
    <string name="app_name">Car Driver</string>
    <string name="direction_up">Up</string>
    <string name="direction_down">Down</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_drive_snake">DRIVE THAT SNAKE</string>
    <string name="button_forward">Forward</string>
    <string name="button_stop">Stop</string>
    <string name="button_drive_car">DRIVE A CARRRR</string>

    <string name="navHome">Home</string>
    <string name="navBack">Go Back</string>


    <string name="devs">Meet the Developers</string>
    <string name="dana">Meet Dana</string>
    <string name="dana_full">Dana Voros</string>
    <string name="jess">Meet Jess</string>
    <string name="jess_full">Jessica Zuchowski</string>
    <string name="jess_image">Image of Jess with flowers and umbrella.</string>
    <string name="jess_bio">Jess is a recharge by hiking, cooking, sewing, or watching cartoons sort of dev.</string>
    <string name="merry">Meet Merry</string>
    <string name="merry_full">Merry Cimakasky</string>
    <string name="michael">Meet Michael</string>
    <string name="michael_full">Michael Jahns</string>
    <string name="nicole">Meet Nicole</string>
    <string name="nicole_full">Nicole Kalbfleisch</string>
    <string name="trey">Meet Trey</string>
    <string name="trey_full">Trey Herndon</string>
    <string name="merry_bio"> Merry is a non-binary developer who seeks challenges and adventure wherever they go. Driven by whimsy, they delight in creating the absurd and surround themselves with the surreal. Merry makes their home amongst art and cats in Seattle, WA and is eager for the next chance they get to bring a little more magic into the world.</string>
    <string name="nicole_img_description">Nicole, with a cat on her head.</string>
    <string name="nicole_bio">Nicole is a brand new Java dev. She loves working on the back-end and building out the perfect android app. Outside of dev work, you can catch her playing with any animal within arms reach, at the archery range, or re-playing one of the Zelda games.</string>
    <string name="trey_bio">- Illinois native                         - Software Developer                            - Project &amp; Operations Management                             - University of Washington &amp; Citadel Graduate                                                - Army Veteran </string>
    <string name="tret_headShot">trey_headShot</string>
    <string name="nicole_img_description">Nicole, with a cat on her head.</string>
    <string name="nicole_bio">Nicole is a brand new Java dev. She loves working on the back-end and building out the perfect android app. Oustside of dev work, you can catch her playing with any animal within arms reach, at the archery range, or re-playing one of the Zelda games.</string>
</resources>
